Bug#38043: Deadlock between server and falcon

Temporarily disable online alter until StorageTableShare::getIndex() is fixed.